--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
     <title>Manejo Elementos Hermanos</title>
 </head>
 <body>
-    <header></header>
-    <main>
-        <section class="section1"></section>
-        <section class="section2"></section>
-        <section class="section3"></section>
+    <header class="bg-secondary"></header>
+    <main class="border border-danger border-5">
+        <section class="section bg-primary"></section>
+        <section class="section bg-success">
+            
+        </section>
+        <section class="section bg-warning">
+            <article>
+                <button class="btn btn-dark">star</button>
+            </article>
+        </section>
     </main>
-    <footer></footer>
+    <footer class="bg-info"></footer>
         <!-- Enlazamos scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
